--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@react-oauth/google": "^0.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
